apps/frontend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      location /kennisplatform-apis {
        return 301 /communities/kennisplatform-apis;
      }

      location /.well-known/security.txt {
        return 301 $scheme://www.ncsc.nl/.well-known/security.txt;
      }

      location /api/v0 {
        return 301 $scheme://apis.$host/api/v0;
      }

      location ~ ^/apis(/.*)?$ {
        return 301 $scheme://apis.$host/apis$1;
      }

      location ~ ^/static(/.*)?$ {
        return 301 $scheme://apis.$host/static$1;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: set-in-overlay
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc
                port:
                  number: 80
  tls:
    - hosts:
        - set-in-overlay
      secretName: static-tls
